# snake

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: build-release.yml
include/: snake.hpp
resources/: apple.ppm  snake_body.ppm  snake_head.ppm  snake_tail.ppm
src/: main.cpp  snake.cpp
